--- a/.gitignore
+++ b/.gitignore
@@ -109,7 +109,7 @@ wp-content/*
 wp-content/plugins/hello.php
 
 # ignore specific themes
-wp-content/themes/twenty*/
+wp-content/themes/twentyfourteen/
 
 # ignore node/grunt dependency directories
 node_modules/
